# quail-ultra-live

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_0.9.0-beta.1.md  RELEASE_PACKAGE_README.txt  ROADMAP.md  SIGNING.md  compose.yaml  main.js  package-lock.json  package.json  playwright.config.ts  quail-ultra-live-ui-overhaul-plan.md  railway.toml  tsconfig.json  tsconfig.server.json  tsconfig.worker.json  vercel.json  vitest.config.ts
tools/qbank-parser/: .env.example  .gitignore  .ruff.toml  AGENTS.md  Audit.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  archive_run.py  config.py  convert_to_quail.py  main.py  md_to_pdf.py  mypy.ini  native_pack_pdf_export.py  pyproject.toml  pytest.ini  qbank_cli.py  requirements-dev.txt  requirements.txt  setup_google_auth.py
tools/qbank-parser/.github/: pull_request_template.md
tools/qbank-parser/adapters/: __init__.py  filesystem_adapter.py  workflow_adapter.py
tools/qbank-parser/ai/: gemini_processor.py  openai_processor.py  prompts.py  rotation_prompts.py
tools/qbank-parser/app/: __init__.py  extraction_service.py  job_runner.py  status_service.py  v2_pipeline.py  workflows.py
tools/qbank-parser/core/: __init__.py  job_models.py  job_planner.py  job_validation.py
tools/qbank-parser/docs/: architecture.md  development-workflow.md  quail-ultra-live-qbank-delta.md  regression-audit-2026-05-16.md  testing.md  v2-migration-kill-list.md  v2-validation-procedure.md
tools/qbank-parser/domain/: __init__.py  models.py
tools/qbank-parser/stats/: __init__.py  (+4 more)
(+285 files in other folders)
